Changed left styling to percentage

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2679,7 +2679,7 @@ $lato: Lato, sans-serif;
 
       .esign-document-display2 {
         width: 100%;
-        left: 402px;
+        left: 30%;
         //top: 249px;
         background: #E9E9E9;
         height: 100%;
