Mobile Svg View

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2652,7 +2652,7 @@ $lato: Lato, sans-serif;
       .modal-content-mobile{
         background-color: #fefefe;
         margin: 15% auto; 
-        padding: 20px;
+        padding: 0px 0px 20px 0px;
        // width: ($chatWidth)-1;  
         //height: 100%;
 
