--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2983,4 +2983,10 @@ $lato: Lato, sans-serif;
         100% { transform: rotate(360deg); }
       }
 
+      .test{
+        background-color: #262626;
+        width: 100%;
+        height: 100%;
+      }
+
    
