Created toogle for mobile modal back button

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3056,6 +3056,7 @@ $lato: Lato, sans-serif;
 
       .esign-modal-text{
         display: block;
+        font-family: 'Lato';
         color: #000000;
         text-align: left;
         font-style: normal;
