--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3042,6 +3042,27 @@ $lato: Lato, sans-serif;
         100% { transform: rotate(360deg); }
       }
 
+      .loaderwheel_esign_mobile{
+        border: 16px solid #f3f3f3; /* Light grey */
+        border-top: 16px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+        z-index: 30;
+        background-color: #979999;
+        //left: 50%;
+        position: absolute;
+        top: 30%;
+        right: 34%
+
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
       .test{
         background-color: #ffffff;
         width: 100%;
