--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2724,7 +2724,7 @@ $lato: Lato, sans-serif;
         left: 30%;
         //top: 249px;
         background: #E9E9E9;
-        height: 100%;
+        height: 89%;
         margin-bottom: 1%;
         text-decoration: none;
         
@@ -2760,6 +2760,7 @@ $lato: Lato, sans-serif;
         background: #E9E9E9;
         height: 89%;
         overflow: scroll;
+        overflow-x: hidden;
         
 
         @include mobileAndTablet {
@@ -2898,6 +2899,7 @@ $lato: Lato, sans-serif;
         //background: #E9E9E9;
         right: -2px;
         overflow: auto;
+        background-color: #E9E9E9;
 
         @include mobileAndTablet {
             height: 100%;
@@ -3082,7 +3084,7 @@ $lato: Lato, sans-serif;
         color: #000000;
         text-align: left;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 600;
         font-size: medium;
         line-height: 19px;
         letter-spacing: 0.03em;
