Some small fixes

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2400,7 +2400,7 @@ $lato: Lato, sans-serif;
         min-height: 32px;
         overflow-wrap: break-word;
         outline: none;
-        
+        text-align: left;
         box-sizing: border-box;
     
         //width: 511px;
@@ -2446,7 +2446,7 @@ $lato: Lato, sans-serif;
         min-height: 32px;
         overflow-wrap: break-word;
         outline: none;
-        
+        text-align: left;
         box-sizing: border-box;
     
         //width: 511px;
@@ -2724,7 +2724,7 @@ $lato: Lato, sans-serif;
         left: 30%;
         //top: 249px;
         background: #E9E9E9;
-        height: 89%;
+        height: 85%;
         margin-bottom: 1%;
         text-decoration: none;
         
