initial testing placement

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2981,7 +2981,7 @@ $lato: Lato, sans-serif;
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        display: flex;
+        display: inline-block;
       }
 
       .sign-area{
