--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2485,10 +2485,10 @@ $lato: Lato, sans-serif;
         display: block;
         align-items: center;
         text-align: left;
-    
         color: #000000 !important;
         margin-bottom: 5px;
         display: block;
+        margin-left: 1%;
     
     }
 
@@ -2988,6 +2988,7 @@ $lato: Lato, sans-serif;
       .submit-area2{
         width: 100%;
         justify-content: space-between;
+
         //align-items: center;
        // display: flex;
       }
