Updated account helper text on desktop

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3130,6 +3130,18 @@ $lato: Lato, sans-serif;
         line-height: 19px;
         margin-top: 1%;
         white-space: nowrap;
+      }
 
+      .bank-text-small-desktop {
+        font-family: 'Lato';
+        color: #000000;
+        text-align: left;
+        font-style: normal;
+        font-weight: 400;
+        font-size: small;
+        line-height: 19px;
+        margin-top: 1%;
+        white-space: nowrap;
+        margin-left: 1%;
       }
    
