--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2411,6 +2411,11 @@ $lato: Lato, sans-serif;
         //margin-left: 2%;
     }
 
+    .esign-input-box::placeholder {
+        color: #262626;
+        opacity: 1;
+    }
+
     .esign-input-box-modal {
         
         height: 53px;
@@ -2434,6 +2439,11 @@ $lato: Lato, sans-serif;
         //margin-bottom: 5px;
         //margin-left: 2%;
     }
+
+    .esign-input-box-modal::placeholder {
+        color: #262626;
+        opacity: 1;
+    }
     
     .esign-initial-box {
         
@@ -2456,6 +2466,11 @@ $lato: Lato, sans-serif;
         //margin-bottom: 5px;
         margin-left: 3%;
         margin-right: 2%
+    }
+
+    .esign-initial-box::placeholder {
+        color: #262626;
+        opacity: 1;
     }
 
     .esign-grey-text {
