--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2003,6 +2003,23 @@ $lato: Lato, sans-serif;
         box-shadow: 2px 2px 4px 0px $c_shadow;
     }
 
+    .gideon-submit-button-presign {
+        background-color: #3F6DE1;
+        border: 1px solid #3F6DE1;
+        border-radius: 3px !important;
+        color: #ffffff;
+        min-height: 32px;
+        height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        font-size: 22px !important;
+        box-shadow: 2px 2px 4px 0px $c_shadow;
+        margin-top: 40px;
+    }
+
     .gideon-submit-button-modal {
         background-color: #3F6DE1;
         border: 1px solid #3F6DE1;
@@ -2055,6 +2072,8 @@ $lato: Lato, sans-serif;
         box-shadow: 2px 2px 4px 0px $c_shadow;
         position: absolute;
         left: 13%;
+        font-size: 22px !important;
+        margin-top: 40px;
     }
 
     .gideon-submit-button-white {
@@ -2910,9 +2929,9 @@ $lato: Lato, sans-serif;
 
       .pdfholder{
         position: absolute;
-        top: 42%;
+        top: 46%;
         width: 101%;
-        height: 100%;
+        height: 95%;
         //background: #E9E9E9;
         right: -2px;
         overflow: auto;
