Added hover css for presign button

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2107,6 +2107,12 @@ $lato: Lato, sans-serif;
         color: #3F6DE1;
     }
 
+    .gideon-submit-button-presign:hover {
+        background-color: #fff;
+        border-color: #3F6DE1;
+        color: #3F6DE1;
+    }
+
     .gideon-submit-button:active {
         background-color: #3F6DE1;
         border-color: #3F6DE1;
