Clean up of console logs

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3147,7 +3147,7 @@ $lato: Lato, sans-serif;
 
       .loading_esign_mobile{
         position: fixed;
-        //top: 46%;
+        top: 40%;
         left: 0;
         right: 0;
         bottom: 0;
