missing color - gideon-border-grey

--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -3,7 +3,7 @@
 @import "includes/multiple-upload";
 
 
-// COLORS
+// COLORS - add border grey
 
 $gideon-logo-yellow: #eed77a;
 $gideon-dark-blue: #31ace2;
