re-add color at bottom

--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -28,6 +28,7 @@ $gideon-black: #262626;
 $gideon-dark-blue: #3F6DE1;
 $gideon-hover-blue: #EDF2FF;
 $gideon-history-grey: #edf2ff;
+$gideon-border-gray: #dcdcdc;
 
 
 // SIZES
