--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3049,7 +3049,8 @@ $lato: Lato, sans-serif;
       .presign_area_full {
         //width: 50%;
         padding: 0px 0px 0px 0px !important;
-        height: 20%; 
+        height: 25%; 
+        margin-right: 50%;
        // background-size: 50% 100%;
       }
 
