added div for fullscreen button

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2045,6 +2045,11 @@ $lato: Lato, sans-serif;
 
     }
 
+    .fullbutton-test {
+        width: 70%;
+        margin-left: 15%;
+    }
+
     .gideon-submit-button-modal {
         background-color: #3F6DE1;
         border: 1px solid #3F6DE1;
