adjusted esign paper fullscreen size

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3115,7 +3115,7 @@ $lato: Lato, sans-serif;
         //width: 50%;
         padding: 0px 0px 0px 0px !important;
         height: 25%; 
-        margin-right: 50%;
+        //margin-right: 50%;
        // background-size: 50% 100%;
       }
 
@@ -3126,7 +3126,7 @@ $lato: Lato, sans-serif;
       }
 
       .fullsign_bg {
-        width: 50%;
+        width: 100%;
       }
 
       .presign_area_full_post {
