Added special styling for bold text fullscreen

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2402,6 +2402,29 @@ $lato: Lato, sans-serif;
     }
     }
 
+    .esign-message-handoff-bigfull {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 800;
+        font-size: xx-large;
+        line-height: 40px;
+        /* or 89% */
+        margin-left: 15%;
+        margin-right: 15%;
+
+        text-align: center;
+        letter-spacing: 0.04em;
+
+        /* Gideon/Primary text */
+
+       color: #262626;
+       padding: 15px 0px 15px 0px;
+
+       @include mobileAndTablet{
+        padding: 20px 0px 15px 0px;
+    }
+    }
+
     .esign-message-handoff-big2 {
         font-family: 'Lato';
         font-style: normal;
