--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2024,6 +2024,91 @@ $lato: Lato, sans-serif;
 
     }
 
+    .gideon-submit-button-presign-fullscreen {
+        background-color: #3F6DE1;
+        border: 1px solid #3F6DE1;
+        border-radius: 3px !important;
+        color: #ffffff;
+        min-height: 32px;
+        height: auto;
+        //width: 80%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        font-size: 22px !important;
+        box-shadow: 2px 2px 4px 0px $c_shadow;
+
+        @media (min-height: 924px) {
+            margin-top: 40px;
+        }
+
+    }
+
+    .gideon-submit-button-presign-fullscreen:hover {
+        background-color: #fff;
+        border-color: #3F6DE1;
+        color: #3F6DE1;
+    }
+
+    .gideon-submit-button-presign-fullscreen-disabled:hover {
+        background-color: #B5B5B5 !important;
+        cursor: not-allowed !important;
+        color: white !important;
+    }
+
+    .gideon-submit-button-presign-fullscreen2 {
+        background-color: #3F6DE1;
+        border: 1px solid #3F6DE1;
+        border-radius: 3px !important;
+        color: #ffffff;
+        min-height: 32px;
+        height: auto;
+        width: 80%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        font-size: 22px !important;
+        box-shadow: 2px 2px 4px 0px $c_shadow;
+
+        @media (min-height: 924px) {
+            margin-top: 40px;
+        }
+
+    }
+
+    .gideon-submit-button-presign-fullscreen2:hover {
+        background-color: #fff;
+        border-color: #3F6DE1;
+        color: #3F6DE1;
+    }
+
+    .gideon-submit-button-presign-fullscreen2-disabled:hover {
+        background-color: #B5B5B5 !important;
+        cursor: not-allowed !important;
+        color: white !important;
+    }
+
+    .fullbutton-test {
+        width: 70%;
+        margin-left: 18%;
+    }
+
+    .fullbutton-testpost {
+        width: 70%;
+        margin-left: 24%;
+
+        //@media (max-height: 924px) {
+       //     margin-left: 18%;
+       //    }
+    }
+
+    .fullbutton-test2 {
+        width: 70%;
+        margin-left: 20%;
+    }
+
     .gideon-submit-button-modal {
         background-color: #3F6DE1;
         border: 1px solid #3F6DE1;
@@ -2076,6 +2161,28 @@ $lato: Lato, sans-serif;
         box-shadow: 2px 2px 4px 0px $c_shadow;
         position: absolute;
         left: 13%;
+        font-size: 22px !important;
+
+        @media (min-height: 924px) {
+            margin-top: 40px;
+        }
+    }
+
+    .gideon-submit-button-download-full {
+        text-decoration:none;
+        background-color: #3F6DE1;
+        border: 1px solid #3F6DE1;
+        border-radius: 3px !important;
+        color: #ffffff !important;
+        min-height: 32px;
+        height: auto;
+        width: 42%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        box-shadow: 2px 2px 4px 0px $c_shadow;
+        position: absolute;
         font-size: 22px !important;
 
         @media (min-height: 924px) {
@@ -2372,6 +2479,8 @@ $lato: Lato, sans-serif;
         font-size: xx-large;
         line-height: 40px;
         /* or 89% */
+        margin-left: 15%;
+        margin-right: 15%;
 
         text-align: center;
         letter-spacing: 0.04em;
@@ -2415,10 +2524,17 @@ $lato: Lato, sans-serif;
         line-height: 19px;
         text-align: center;
         letter-spacing: 0.03em;
+        left: 15%;
+        margin-left: 15%;
+        margin-right: 15%;
     
        /* Gideon/Primary text */
        color: #262626;
        padding: 15px 0px 15px 0px;
+
+       //@media (max-height: 924px) {
+       // margin-left: 2%;
+       //}
 
        @include mobileAndTablet {
         padding-bottom: 30px;
@@ -2680,18 +2796,12 @@ $lato: Lato, sans-serif;
         display: flex;
         position: fixed; /* Stay in place */
         z-index: 1; /* Sit on top */
-       // left: 85%;
         margin-top: $headerTotalHeight;
         top: 19%;
-        width: 165%; /* Full width */
+        width: 92%; /* Full width */
         height: 188%;
-        left: 50%;
-        //width: 242vw;
+        left: 42.5%;
         transform: translate(-10%, -10%);
-        //background-color: rgb(0,0,0); 
-        //background-color: rgba(0,0,0,0.4);
-       // top: 25%;
-           // transform: translateY(-$actionsHeight);
         
         @include mobileAndTablet {
             width: 150%;
@@ -2713,17 +2823,11 @@ $lato: Lato, sans-serif;
         display: flex;
         position: fixed; /* Stay in place */
         z-index: 1; /* Sit on top */
-       // left: 85%;
         margin-top: $headerTotalHeight;
         top: 15%;
-        //width: 150%; /* Full width */
         height: 188%;
         transform: translate(-10%, -10%);
         width: $chatWidth;
-        //background-color: rgb(0,0,0); 
-        //background-color: rgba(0,0,0,0.4);
-       // top: 25%;
-           // transform: translateY(-$actionsHeight);
         
         @include mobileAndTablet {
             width: 150%;
@@ -3072,8 +3176,33 @@ $lato: Lato, sans-serif;
       .presign_area_full {
         //width: 50%;
         padding: 0px 0px 0px 0px !important;
-        height: 20%; 
+        height: 25%; 
+        //margin-right: 50%;
        // background-size: 50% 100%;
+      }
+
+      .fullsign_paper {
+        position: absolute;
+        left: 30%;
+        top: 2%;
+
+        @media (max-height: 924px) {
+        left: 25%;
+        top: 2%;  
+        }
+      }
+
+      .fullsign_bg {
+        width: 100%;
+      }
+
+      .presign_area_full_post {
+        //width: 50%;
+        padding: 0px 0px 0px 0px !important;
+        height: 25%; 
+       //@media (max-height: 924px) {
+       // margin-left: -10%;  
+       // }
       }
 
       .uploaded-files-container {
