--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3101,7 +3101,7 @@ $lato: Lato, sans-serif;
         }
 
       .esign-topbar-buttons {
-        margin-top: 2%;
+        margin-top: 20px;
         right: 11%;
         position: absolute;
         display: inline-block;
