--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3101,10 +3101,13 @@ $lato: Lato, sans-serif;
         }
 
       .esign-topbar-buttons {
-        margin-top: 20px;
+        margin-top: 2%;
         right: 11%;
         position: absolute;
         display: inline-block;
+        @media (max-height: 920px) {
+            margin-top: 20px; 
+            }
 
       }
 
