--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2164,11 +2164,15 @@ $lato: Lato, sans-serif;
         text-align: center;
         box-shadow: 2px 2px 4px 0px $c_shadow;
         position: absolute;
-        left: 13%;
+        left: 15%;
         font-size: 22px !important;
 
         @media (min-height: 924px) {
             margin-top: 40px;
+        }
+
+        &-fullscreen {
+            left: 13%;
         }
     }
 
@@ -2440,6 +2444,7 @@ $lato: Lato, sans-serif;
         line-height: 40px;
         /* or 89% */
 
+        margin-left: 5%;
         text-align: center;
         letter-spacing: 0.04em;
 
@@ -2449,7 +2454,7 @@ $lato: Lato, sans-serif;
        padding: 15px 0px 15px 0px;
 
        @include mobileAndTablet{
-        padding: 20px 0px 15px 0px;
+        padding: 20px 0px 15px 40px;
     }
     }
 
@@ -2483,8 +2488,8 @@ $lato: Lato, sans-serif;
         font-size: xx-large;
         line-height: 40px;
         /* or 89% */
-        margin-left: 15%;
-        margin-right: 15%;
+        //margin-left: 15%;
+        //margin-right: 15%;
 
         text-align: center;
         letter-spacing: 0.04em;
@@ -2508,7 +2513,8 @@ $lato: Lato, sans-serif;
         line-height: 19px;
         text-align: center;
         letter-spacing: 0.03em;
-    
+        margin-right: 15%;
+        margin-left: 2%;
        /* Gideon/Primary text */
        color: #262626;
        padding: 15px 0px 15px 0px;
@@ -2530,7 +2536,7 @@ $lato: Lato, sans-serif;
         letter-spacing: 0.03em;
         left: 15%;
         margin-left: 2%;
-        margin-right: 15%;
+        //margin-right: 15%;
     
        /* Gideon/Primary text */
        color: #262626;
@@ -2544,6 +2550,7 @@ $lato: Lato, sans-serif;
         padding-bottom: 30px;
         padding-top: 50px
        }
+
     }
     
     
