--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3097,8 +3097,12 @@ $lato: Lato, sans-serif;
     }
 
         .esign-top-text{
-            width: 100%;
+            position: fixed;
+            right: 0;
+            // width: 100%;
+            /*change for different screen size */
             margin-top: 2%;
+
             margin-right: 1%;
             display: block;
             font-family: 'Lato';
@@ -3109,6 +3113,10 @@ $lato: Lato, sans-serif;
             //padding-left: 15px;
             text-align: right;
             color: #575757 !important;
+
+            @media (max-height: 920px) {
+                margin-top: 2%; 
+                }
 
             @include mobileAndTablet {
                 font-size: x-small;
@@ -3122,6 +3130,8 @@ $lato: Lato, sans-serif;
         right: 11%;
         position: absolute;
         display: inline-block;
+        
+         /*change for different screen size */
         @media (max-height: 920px) {
             margin-top: 20px; 
             }
