adjusted margin top of topbar text

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3103,7 +3103,7 @@ $lato: Lato, sans-serif;
             right: 0;
             // width: 100%;
             /*change for different screen size */
-            margin-top: 2%;
+            margin-top: 45px;
 
             margin-right: 1%;
             display: block;
