--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -3342,7 +3342,8 @@ $lato: Lato, sans-serif;
       .submit-area2{
         width: 100%;
         justify-content: space-between;
-
+        box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(5px); 
         //align-items: center;
        // display: flex;
       }
