--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2456,7 +2456,7 @@ $lato: Lato, sans-serif;
        padding: 15px 0px 15px 0px;
 
        @include mobileAndTablet{
-        padding: 20px 0px 15px 40px;
+        padding: 20px 0px 15px 0px;
     }
     }
 
@@ -2480,6 +2480,7 @@ $lato: Lato, sans-serif;
 
        @include mobileAndTablet{
         padding: 20px 0px 15px 40px;
+        margin-left: 0%;
     }
     }
 
@@ -2523,7 +2524,8 @@ $lato: Lato, sans-serif;
 
        @include mobileAndTablet {
         padding-bottom: 30px;
-        padding-top: 50px
+        padding-top: 50px;
+        margin-right: 0%
        }
     }
 
@@ -2544,11 +2546,9 @@ $lato: Lato, sans-serif;
        color: #262626;
        padding: 15px 0px 15px 0px;
 
-       @include mobileAndTablet {
-        margin-left: 15%;
-       }
 
        @include mobileAndTablet {
+        margin-left: 0%;
         padding-bottom: 30px;
         padding-top: 50px
        }
