--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2891,7 +2891,7 @@ $lato: Lato, sans-serif;
         }
       }  
 
-    .modal {
+    .modal-gideon {
         position: fixed; /* Stay in place */
         z-index: 5; /* Sit on top */
         left: 50%;
